# Core

./: .gitattributes  .rustfmt.toml  Cargo.toml  Cross.toml  Makefile  Makefile.toml  REUSE.toml
.cargo/: config.toml
crates/cli/: Cargo.toml
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/engine/src/frontend/: mod.rs
crates/engine/src/frontend/lexer/: byte_class.rs  lexer.rs  mod.rs
crates/engine/src/shared/: mod.rs
crates/engine/src/shared/common/: characters.rs
crates/engine/src/shared/language/: mod.rs
crates/engine/src/shared/language/keyword/: impls.rs  kind.rs
crates/engine/src/shared/language/number/: impls.rs  kind.rs
crates/engine/src/shared/language/operator/: impls.rs  kind.rs  mod.rs
crates/engine/src/shared/language/syntax/: impls.rs  kind.rs
crates/engine/src/shared/language/token/: kind.rs
crates/engine/src/shared/position/: mod.rs
crates/lsp/: Cargo.toml
crates/wasm/: Cargo.toml
test/engine-lexer/: Cargo.toml
test/engine-lexer/src/: lib.rs  speed.rs
tools/: symbols-bytes.txt  symbols.py  symbols.txt
